[project]
name = "torch-scheduler"
version = "0.0.1"
authors = [
  { name="Je Hon Tan", email="jehontan@gmail.com" },
]
description = "Custom scheduling to support fancy training routines for PyTorch."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jehontan/torch-scheduler"
"Bug Tracker" = "https://github.com/jehontan/torch-scheduler/issues"